force-app/main/default/objects/SDM_Alleged_Victim_and_Maltreator__c/SDM_Alleged_Victim_and_Maltreator__c.object-meta.xml
<CustomObject>
    <label>SDM Alleged Victim and Maltreator</label>
    <nameField>
        <displayFormat>AM-{000000}</displayFormat>
        <label>SDM Alleged Victim and Mal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDM Alleged Victim and Maltreators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>