force-app/main/default/objects/SDM_Alleged_Victim_and_Maltreator__c/fields/Alleged_Maltreator_s__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Maltreator_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Maltreator(s)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SDM Alleged Victim and Maltreators</relationshipLabel>
    <relationshipName>SDM_Alleged_Victim_and_Maltreators</relationshipName>
    <type>Lookup</type>
</CustomField>