force-app/main/default/objects/SDM_Alleged_Victim_and_Maltreator__c/fields/Alleged_Victim_s__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Victim_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Victim(s)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SDM Alleged Victim and Maltreators (Alleged Victim(s))</relationshipLabel>
    <relationshipName>SDM_Alleged_Victim_and_Maltreators1</relationshipName>
    <type>Lookup</type>
</CustomField>