force-app/main/default/objects/SDM_Alleged_Victim_and_Maltreator__c/fields/SDM__c.field-meta.xml
<CustomField>
    <fullName>SDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDM</label>
    <referenceTo>SDM__c</referenceTo>
    <relationshipLabel>Alleged Victim and Maltreators</relationshipLabel>
    <relationshipName>SDM_Alleged_Victim_and_Maltreators</relationshipName>
    <type>Lookup</type>
</CustomField>